--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <header class="navbar navbar-expand-lg navbar-light bc-white">
     <div class="container">
-    <div class="col-3">
-    <a class="navbar-brand" href="#">
+  
+    <div class="col-2">
+    <a class="navbar-brand" [routerLink]="['/home']">
       <img src="assets/images/sg-logo.png" alt="sgs-logo">
     </a>
     </div>
@@ -11,10 +12,10 @@
     <div class="col-6 collapse navbar-collapse justify-content-around" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" [routerLink]="['/home']" skipLocationChange>Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" [routerLink]="['/about']" skipLocationChange>About Us</a>
         </li>
         <li class="nav-item dropdown"> <!-- Add 'dropdown' class to the 'Services' menu item -->
             <a class="nav-link dropdown-toggle" href="#" id="servicesDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -37,18 +38,24 @@
                     <li><a href="#">Ionic</a></li>
                     <li><a href="#">Android and IOS</a></li>
                     </ul></div>
-                    </div>
+                </div>
                 </div>
             </div>
           </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link" [routerLink]="['/contact']" skipLocationChange >Contact</a>
         </li>
       </ul>
     </div>
-    <div class="col-3 justify-content-end text-end">
-        <div class="top-btn"><a href="tel:1234567899" class="btc-secondary rounded-pill px-4 py-2 fw-bold"><i class="fa fa-phone" aria-hidden="true"></i>
-             123-456-7899</a></div>
+    <div class="col-12 col-sm-12 col-lg-4 hd-rt justify-content-end text-end d-flex justify-content-around">
+      <div class="top-mail" style="margin-top: 4px;">
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+<a href="mailto:info@Softgenics.online">info@Softgenics.online</a>            
+       </div>
+        <div class="top-btn">
+             <button (click)="openWhatsAppChat()" class="fw-bold border-0"><i class="fa fa-whatsapp" aria-hidden="true"></i>+1 (503) 360-1459</button></div>
+
+            
     </div>
 </div>
   </header>
