--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,14 +1,17 @@
 .page-section {
     background-image: url('/../assets/images/hero.jpg');
     background-size: cover;
+    background-attachment: fixed;
     min-height: 700px;
 
    }
-.intro-text {background-color: rgba(255, 255, 255, 0.3);    border: 5px solid #ffffff;}
+.intro-text {background-color: rgba(255, 255, 255, 0.5);    border: 5px solid #ffffff;}
+
+.intro-text p, .intro-text h1 {text-shadow: 2px 2px 9px rgba(60, 60, 60, 0.7);}
 
 .serv-icon {width: 80px;border: 5px solid #3c2f8b;border-radius: 10px;margin-bottom: 20px;background-color: #ffffff;}
 
-.serv-icon img {display: inline-block;width: 100%;padding: 10px;}
+.serv-icon img, .miss-img img {display: inline-block;width: 100%;padding: 10px;}
 
 .serv-box {margin-bottom: 60px;box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.2);background-color: #ffffff;}
 
@@ -36,7 +39,7 @@
 .serv-box:hover h5 a{color:#a94196}
 
 
-.page-section2 {padding: 6% 0 8%;}
+.page-section2 {padding: 5% 0 8%;}
 
 .page-section2 h2 {margin-bottom: 120px;}
 
@@ -44,7 +47,7 @@
 
 .about-img img {display: block;width: 100%;position: relative;margin-top:-50px}
 
-.page-section3 {position: relative;padding:0 0 5%;background-color: #ffffff;}
+.page-section3 {position: relative;padding:0 0 8%;background-color: #ffffff;}
 
 .page-section3:before {position:absolute;content: "";background-color: #3c2f8b;width: 40%;height: 90%;left:-50px;top:-100px;}
 
@@ -52,3 +55,55 @@
 .abt-cnt {margin-left:-50px;position: relative;}
 .abt-cnt:before {position:absolute;content: "";background-color: #3c2f8b;width: 40%;height: 130%;left:-50px;top:0;bottom: 0;margin:auto;}
 .abt-box {position: relative;z-index: 9;}
+
+.page-section4 {padding:5% 0;background-image: url('/../assets/images/choose-img.jpg');background-size: cover;background-repeat: no-repeat;position: relative;z-index: 1;background-attachment: fixed;}
+.page-section4:before {position: absolute;content: "";left:0;right:0;top:0;bottom:0;margin:auto;background-color: rgb(60 47 139 / 75%);width: 100%;height:100%;z-index: -1;}
+.choos-box {background-color: rgba(255,255,255,0.5);border: 3px solid #fff;
+    border-radius: 5px;}
+
+.choos-box p {color:#000000;}
+.choos-box h5 {padding-top:70px;position: relative;color: #3c2f8b;text-shadow: 2px 2px 9px rgba(60, 60, 60, 0.3);}
+
+.choos-box h5:before {width: 50px;
+    height: 50px;
+    background-color: #3c2f8b;
+    color: #fff;
+    border-radius: 50px;
+    padding: 15px;
+    position: absolute;
+    counter-increment: my-sec-counter;
+  content:  counter(my-sec-counter);
+    top:0;
+    text-align: center;
+    left:0;right: 0;margin:0 auto;
+}
+
+
+.page-section5 {padding:6% 0;}
+
+
+.miss-img {position: relative;margin-left:-50px;}
+
+.miss-img:before {position: absolute;content: "";background-color: #3c2f8b;width: 40%;height: 90%;right:-50px;top:-30px;}
+.miss-img img {position: relative;z-index: 1;}
+
+
+
+
+.carousel-item {
+    height: 200px;
+    width: 400px;
+  }
+  
+  .orange {
+    background: rgb(230, 191, 119);
+  }
+  
+  .blue {
+    background: rgb(127, 127, 245);
+  }
+  
+  .red {
+    background: rgb(236, 179, 179);
+  }
+  
