--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -3,10 +3,37 @@
       <div class="col-lg-5 mb-5 mb-lg-0">
         <h2 class="text-dark font-weight-bold mb-3 text-uppercase">About US</h2>
         <p class="description text-dark mt-4">At Soft Genic, we are passionate about the digital world and dedicated to crafting exceptional web experiences. We are a team of skilled and creative web developers who thrive on turning your ideas into functional, visually stunning, and user-friendly websites</p>
-      </div>
+    
+      <h6>Who We Are</h6>
+
+      <p>  Founded in 2023, SoftGenic Services has emerged as a leading player in the software industry, thanks to our relentless commitment to excellence. We're a team of passionate software engineers, designers, and visionaries, united by a common purpose: to deliver software that transforms concepts into reality.
+        
+        What Sets Us Apart</p>
+        
+        <h6>Innovation at Our Core</h6> We thrive on challenges and embrace the opportunity to explore new horizons. Our in-house research and development teams are dedicated to pushing the boundaries of what's possible, continuously enhancing our software solutions.
+        
+       <h6> Customer-Centric Approach</h6><p> We believe in putting our customers at the heart of everything we do. Your success is our success, and we're committed to providing unparalleled support and tailored solutions to meet your unique needs.
+        </p>
+       <h6> Skilled and Diverse Team</h6><p> Our team consists of experts from various backgrounds and disciplines, offering a unique blend of skills and perspectives that result in comprehensive software solutions.
+        
+        Quality and Security We prioritize the highest quality standards and adhere to stringent security protocols. Your data and privacy are of utmost importance, and we maintain the highest level of integrity in all our operations.
+        
+        What We Offer</p>
+        
+        <p>Softgenic Services offers a wide range of software solutions, including Android,Ios and dynamic Web application </p>
+       
+       <p> We are having more than 7 years of experianced developpers worked in diifrent application like health domain,vedio survilence, internet service provider applications
+        Our Commitment</p>
+        
+        <p>Our commitment goes beyond delivering software; it extends to creating long-lasting relationships. We are dedicated to the success of our clients and partners and are continuously investing in research and development to remain at the forefront of the ever-evolving technology landscape.</p>
+        
+        Get in Touch
+        
+        <p>We invite you to explore our software solutions and experience the difference that Softgenic Services can make. Whether you're an individual, a startup, or an established enterprise, we're here to help you reach your goals.</p>
+    </div>
       <div class="col-lg-6 mb-lg-auto">
         <div class="rounded shadow-lg overflow-hidden">
-          <img class="img-fluid" src="../assets/img/brand/about.jpg" alt="about">
+          <img class="img-fluid" src="../assets/images/about-img.jpg" alt="about">
           <!-- <ngb-carousel>
               <ng-template ngbSlide>
                 <img class="img-fluid" src="assets/img/theme/img-1-1200x1000.jpg" alt="First slide">
