--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,12 +2,12 @@
     <div class="container">
         <div class="intro ripple pinkBg">
             <!-- <img class="intro-img" src="assets/images/hero.jpg" alt="hero" /> -->
-            <div class="col-lg-6 col-12 intro-text left-0 bg-faded p-5 rounded align-middle ">
+            <div class="col-lg-6 col-12 intro-text left-0 bg-faded p-3 p-sm-3 p-lg-5 rounded align-middle text-center text-lg-start">
                 <h1 class="mb-3 text-white">
                   Soft Genic Services
                 </h1>
                 <p class="mb-4 text-dark fw-bold">Transforming Ideas into Web Realities.</p>
-                <div class="intro-button mx-auto"><a class="btc-secondary rounded-pill px-4 py-3 fw-bold d-inline-block" href="#">Contact Us Today!</a></div>
+                <div class="intro-button mx-auto"><a class="btc-secondary rounded-pill px-4 py-3 fw-bold d-inline-block" >Contact Us Today!</a></div>
             </div>
         </div>
     </div>
@@ -18,38 +18,38 @@
 <section class="page-section2 d-flex align-items-center clearfix bc-light">
 <div class="container">
 <h2 class="section-heading text-center">Our Services</h2>
-<div class="grid slider-item">
-    <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-      <div class="serv-i s-icon1"><a href="#"></a></div>
-      <h5 class="mb-3"><a href="#">PSD to HTML Conversion</a></h5>
+<div class="grid slider-item px-3">
+    <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+      <div class="serv-i s-icon1"><a ></a></div>
+      <h5 class="mb-3"><a >PSD to HTML Conversion</a></h5>
       <p class="description mb-2">Transform your creative designs into functional web pages with our PSD to HTML conversion service.</p>
          </div>
 
-    <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-        <div class="serv-i s-icon2"><a href="#"></a></div>
-      <h5 class="mb-3"><a href="#">WordPress Development</a></h5>
+    <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+        <div class="serv-i s-icon2"><a ></a></div>
+      <h5 class="mb-3"><a >WordPress Development</a></h5>
       <p class="description mb-2">Harness the power of WordPress for your web presence.</p>
          </div>
 
-    <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-        <div class="serv-i s-icon3"><a href="#"></a></div>
-      <h5 class="mb-3"><a href="#">Angular Web Development</a></h5>
+    <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+        <div class="serv-i s-icon3"><a ></a></div>
+      <h5 class="mb-3"><a >Angular Web Development</a></h5>
       <p class="description mb-2">Leverage the power of Angular to build dynamic and interactive web applications.</p>
          </div>
     
-    <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-        <div class="serv-i s-icon4"><a href="#"></a></div>
-      <h5 class="mb-3"><a href="#">Single Page Application</a></h5>
+    <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+        <div class="serv-i s-icon4"><a ></a></div>
+      <h5 class="mb-3"><a >Single Page Application</a></h5>
       <p class="description mb-2">Experience the benefits of a Single Page Application (SPA) for your web presence.</p>
          </div>
-    <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-        <div class="serv-i s-icon5"><a href="#"></a></div>
-        <h5 class="mb-3"><a href="#">Ionic</a></h5>
+    <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+        <div class="serv-i s-icon5"><a ></a></div>
+        <h5 class="mb-3"><a >Ionic</a></h5>
         <p class="description mb-2">Experience in Ionic  to perform fast on the all of the latest mobile devices.</p>
                  </div>
-          <div class="serv-box g-col-12 g-col-md-4 p-5 pt-0">
-            <div class="serv-i s-icon6"><a href="#"></a></div>
-            <h5 class="mb-3"><a href="#">Android and IOS</a></h5>
+          <div class="serv-box g-col-12 g-col-md-4 p-lg-5 p-sm-4 p-4 pt-0 pt-sm-0 pt-lg-0">
+            <div class="serv-i s-icon6"><a ></a></div>
+            <h5 class="mb-3"><a >Android and IOS</a></h5>
             <p class="description mb-2">Experience in to build high-quality iOS, Android  Apps.</p>
                          </div>
   </div>
