--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,10 +1,10 @@
 <div class="container">
     <div class="row row-grid justify-content-center align-items-center">
       <div class="col-lg-6">
-        <h2 class="text-white font-weight-bold mb-3 text-center text-uppercase">Contact Us</h2>
+        <h2 class="text-black font-weight-bold mb-3 text-center text-uppercase">Contact Us</h2>
       
         
-          <div class="card bg-primary shadow border-0">
+          <div class="card bc-gray shadow border-0">
             
             <div class="card-body px-lg-5 py-lg-5">
               
