--- a/src/app/contactus/contactus.component.scss
+++ b/src/app/contactus/contactus.component.scss
@@ -18,7 +18,7 @@ label {
   .why-blc h5 b{
     width: 50px;
     height: 50px;
-    background-color: #0e2798;
+    background-color: #040a25;
     color: #fff;
     border-radius: 50px;
     padding: 10px;
@@ -26,15 +26,25 @@ label {
     text-align: center;
 }
 .why-blc h5{
-  color: #0e2798;
+  color: #040a25;
 
 }
 form{
-  color: #4456a9 !important;
+  color: #040a25 !important;
 
 }
 button{
   background-color: #fff !important;
   color: #0e2798 !important;
 
+}
+.container{
+margin-bottom: 10px;
+}
+.text-black {
+    color: #040a25 !important;
+}
+label{
+    color: #040a25 !important;
+  
 }
