--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,34 +9,12 @@
 
 .intro-text p, .intro-text h1 {text-shadow: 2px 2px 9px rgba(60, 60, 60, 0.7);}
 
-.serv-icon {width: 80px;border: 5px solid #3c2f8b;border-radius: 10px;margin-bottom: 20px;background-color: #ffffff;}
-
-.serv-icon img, .miss-img img {display: inline-block;width: 100%;padding: 10px;}
-
-.serv-box {margin-bottom: 60px;box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.2);background-color: #ffffff;}
-
-.serv-box h5 a{color:#3c2f8b;}
-.serv-i a {position: relative;display: inline-block;padding-top: 100px;}
-
-.serv-i a:before {width:90px;height: 90px;position: absolute;content: "";left:0;top:-40px;border:5px solid #3c2f8b;padding:45px;background-repeat: no-repeat;background-position: center;background-color: #ffffff;border-radius: 10px;}
-.serv-i.s-icon1 a:before{background-image: url('/../assets/images/ic1.png');}
-.serv-i.s-icon2 a:before {background-image: url('/../assets/images/ic2.png');}
-.serv-i.s-icon3 a:before {background-image: url('/../assets/images/ic3.png');}
-.serv-i.s-icon4 a:before {background-image: url('/../assets/images/ic4.png');}
-.serv-i.s-icon5 a:before {background-image: url('/../assets/images/ic6.png');}
-.serv-i.s-icon6 a:before {background-image: url('/../assets/images/ic5.png');}
-
-.serv-box:hover .serv-i a:before {border:5px solid #a94196;}
-.serv-box:hover .serv-i.s-icon1 a:before{background-image: url('/../assets/images/ich1.png');}
-.serv-box:hover .serv-i.s-icon2 a:before {background-image: url('/../assets/images/ich2.png');}
-.serv-box:hover .serv-i.s-icon3 a:before {background-image: url('/../assets/images/ich3.png');}
-.serv-box:hover .serv-i.s-icon4 a:before {background-image: url('/../assets/images/ich4.png');}
-.serv-box:hover .serv-i.s-icon5 a:before {background-image: url('/../assets/images/ich6.png');}
-.serv-box:hover .serv-i.s-icon6 a:before {background-image: url('/../assets/images/ich5.png');}
 
 
 
-.serv-box:hover h5 a{color:#a94196}
+
+
+
 
 
 .page-section2 {padding: 5% 0 8%;}
@@ -53,7 +31,7 @@
 
 
 .abt-cnt {margin-left:-50px;position: relative;}
-.abt-cnt:before {position:absolute;content: "";background-color: #3c2f8b;width: 40%;height: 130%;left:-50px;top:0;bottom: 0;margin:auto;}
+.abt-cnt:before {position:absolute;content: "";background-color: #3c2f8b;width: 40%;height: 130%;left:-50px;top:0;bottom: 0;margin:auto;z-index: 1;}
 .abt-box {position: relative;z-index: 9;}
 
 .page-section4 {padding:5% 0;background-image: url('/../assets/images/choose-img.jpg');background-size: cover;background-repeat: no-repeat;position: relative;z-index: 1;background-attachment: fixed;}
@@ -79,6 +57,8 @@
 }
 
 
+
+
 .page-section5 {padding:6% 0;}
 
 
@@ -86,6 +66,7 @@
 
 .miss-img:before {position: absolute;content: "";background-color: #3c2f8b;width: 40%;height: 90%;right:-50px;top:-30px;}
 .miss-img img {position: relative;z-index: 1;}
+.miss-img img {display: inline-block;width: 100%;padding: 10px;}
 
 
 
@@ -107,3 +88,12 @@
     background: rgb(236, 179, 179);
   }
   
+  @media (max-width: 992px) {
+    .page-section {min-height: 500px;}
+    .page-section3:before {left: 0;top: -50px;}
+    .about-img img {margin-top: 0;}
+    .abt-cnt:before {display: none;}
+    .miss-img {margin-left: 0;}
+    .miss-img:before {right: 0;top: -10px;}
+    .miss-img img {padding-top:0;}
+  }
