--- a/src/styles.scss
+++ b/src/styles.scss
@@ -63,9 +63,9 @@ button, html [type="button"], [type="reset"], [type="submit"] {
 	border-radius:0
 }
 
- h1 {font-size: 3.5rem !important;}
- h2 {font-size: 3rem !important;}
- h3 {font-size: 2.5rem !important;}
+ h1 {font-size: 3rem !important;}
+ h2 {font-size: 2.5rem !important;}
+ h3 {font-size: 2.25rem !important;}
  h4 {font-size: 2rem !important;}
  h5 {font-size: 1.3rem !important;}
  h6 {font-size: 1.2rem !important;}
@@ -100,3 +100,39 @@ button, html [type="button"], [type="reset"], [type="submit"] {
 
 
 .nav-link:active, .nav-link:focus, .nav-link:hover {color:#a94196 !important;}
+
+
+
+// Services
+
+
+.serv-box {margin-bottom: 60px;box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.2);background-color: #ffffff;}
+
+.serv-box h5 a{color:#3c2f8b !important;cursor: pointer;}
+.serv-i a {position: relative;display: inline-block;padding-top: 100px;font-size: 0;cursor: pointer;}
+
+.serv-i a:before {width:90px;height: 90px;position: absolute;content: "";left:0;top:-40px;border:5px solid #3c2f8b;padding:45px;background-repeat: no-repeat;background-position: center;background-color: #ffffff;border-radius: 10px;}
+.serv-i.s-icon1 a:before{background-image: url('/../assets/images/ic1.png');}
+.serv-i.s-icon2 a:before {background-image: url('/../assets/images/ic2.png');}
+.serv-i.s-icon3 a:before {background-image: url('/../assets/images/ic3.png');}
+.serv-i.s-icon4 a:before {background-image: url('/../assets/images/ic4.png');}
+.serv-i.s-icon5 a:before {background-image: url('/../assets/images/ic6.png');}
+.serv-i.s-icon6 a:before {background-image: url('/../assets/images/ic5.png');}
+
+.serv-box:hover .serv-i a:before {border:5px solid #a94196;}
+.serv-box:hover .serv-i.s-icon1 a:before{background-image: url('/../assets/images/ich1.png');}
+.serv-box:hover .serv-i.s-icon2 a:before {background-image: url('/../assets/images/ich2.png');}
+.serv-box:hover .serv-i.s-icon3 a:before {background-image: url('/../assets/images/ich3.png');}
+.serv-box:hover .serv-i.s-icon4 a:before {background-image: url('/../assets/images/ich4.png');}
+.serv-box:hover .serv-i.s-icon5 a:before {background-image: url('/../assets/images/ich6.png');}
+.serv-box:hover .serv-i.s-icon6 a:before {background-image: url('/../assets/images/ich5.png');}
+
+.serv-box:hover h5 a{color:#a94196 !important;}
+
+.serv-box:hover {
+    transform: scale(1.1);
+    transition: 1s;
+}
+
+
+.inner-page h2 {margin-bottom: 120px;}
