--- a/src/app/aboutus/aboutus.component.html
+++ b/src/app/aboutus/aboutus.component.html
@@ -1,16 +1,21 @@
+<section class="inner-page d-flex align-items-center clearfix bc-light py-5 text-lg-start text-md-center text-center">
 <div class="container">
-    <div class="row justify-content-between align-items-center text-center text-md-center text-lg-left">
-      <div class="col-lg-5 mb-5 mb-lg-0">
+   
+     
+        <div class="overflow-hidden col-lg-6 col-md-12 col-sm-12 mb-4 me-lg-5 float-start mx-auto text-center in-img">
+          <img class="img-fluid" src="../assets/images/aboutus.jpg" alt="aboutus">
+        </div>
         <h2 class="text-dark font-weight-bold mb-3 text-uppercase">About US</h2>
-        <p class="description text-dark mt-4">At Soft Genic, we are passionate about the digital world and dedicated to crafting exceptional web experiences. We are a team of skilled and creative web developers who thrive on turning your ideas into functional, visually stunning, and user-friendly websites</p>
+        
+        <p>At Soft Genic, we are passionate about the digital world and dedicated to crafting exceptional web experiences. We are a team of skilled and creative web developers who thrive on turning your ideas into functional, visually stunning, and user-friendly websites</p>
     
       <h6>Who We Are</h6>
 
-      <p>  Founded in 2023, SoftGenic Services has emerged as a leading player in the software industry, thanks to our relentless commitment to excellence. We're a team of passionate software engineers, designers, and visionaries, united by a common purpose: to deliver software that transforms concepts into reality.
+      <p>  Founded in 2023, SoftGenic Services has emerged as a leading player in the software industry, thanks to our relentless commitment to excellence. We're a team of passionate software engineers, designers, and visionaries, united by a common purpose: to deliver software that transforms concepts into reality. What Sets Us Apart</p>
         
-        What Sets Us Apart</p>
+        <h6>Innovation at Our Core</h6> 
         
-        <h6>Innovation at Our Core</h6> We thrive on challenges and embrace the opportunity to explore new horizons. Our in-house research and development teams are dedicated to pushing the boundaries of what's possible, continuously enhancing our software solutions.
+        <p>We thrive on challenges and embrace the opportunity to explore new horizons. Our in-house research and development teams are dedicated to pushing the boundaries of what's possible, continuously enhancing our software solutions.</p>
         
        <h6> Customer-Centric Approach</h6><p> We believe in putting our customers at the heart of everything we do. Your success is our success, and we're committed to providing unparalleled support and tailored solutions to meet your unique needs.
         </p>
@@ -31,18 +36,7 @@
         
         <p>We invite you to explore our software solutions and experience the difference that Softgenic Services can make. Whether you're an individual, a startup, or an established enterprise, we're here to help you reach your goals.</p>
     </div>
-      <div class="col-lg-6 mb-lg-auto">
-        <div class="rounded shadow-lg overflow-hidden">
-          <img class="img-fluid" src="../assets/images/about-img.jpg" alt="about">
-          <!-- <ngb-carousel>
-              <ng-template ngbSlide>
-                <img class="img-fluid" src="assets/img/theme/img-1-1200x1000.jpg" alt="First slide">
-              </ng-template>
-              <ng-template ngbSlide>
-                <img class="img-fluid" src="assets/img/theme/img-2-1200x1000.jpg" alt="Second slide">
-              </ng-template>
-          </ngb-carousel> -->
-        </div>
-      </div>
-    </div>
-  </div>
+      
+  
+
+  </section>
