--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -44,6 +44,12 @@
 
 .hd-rt button:hover, .hd-rt a:hover {color:#a94196}
 
+
+.mob-nav {display: none;}
+
+
+
+
 @media (max-width: 992px) {
   .dropdown-menu {display: none !important;}
   .navbar button.navbar-toggler span {
@@ -51,13 +57,13 @@
     outline: 0;
 }
 .navbar  .dropdown-toggle::after {display: none !important;}
-.hd-rt {margin:20px 0 10px;}
+
 .navbar button.navbar-toggler {
   background: #8e8c9a !important;
 }
-ul.navbar-nav {
-  background: #8e8c9a !important;
-}
+
+div#navbarNav {display: none;}
+.mob-nav {display: block;}
 
 }
 
@@ -68,5 +74,5 @@ ul.navbar-nav {
  
 }
 .hd-rt {display: block !important;text-align: center !important;}
-
+.offcanvas {width: 70% !important;}
 }
