--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -1,3 +1,5 @@
+<section class="inner-page  clearfix bc-light py-5">
+
 <div class="container">
     <div class="row row-grid justify-content-center align-items-center">
       <div class="col-lg-6">
@@ -37,3 +39,4 @@
       </div>
     </div>
   </div>
+</section>
