--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,9 +6,36 @@
       <img src="assets/images/sg-logo.png" alt="sgs-logo">
     </a>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+    
+    <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> -->
+    <div class="mob-nav">
+      <button class="btc-secondary px-2 py-1" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight"><i class="fa fa-bars" aria-hidden="true"></i></button>
+      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+        <div class="offcanvas-header">
+          <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['']" >Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/about']" >About Us</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['/services']">
+                  Services
+                </a>
+              </li>
+            <li class="nav-item">
+              <a class="nav-link" [routerLink]="['/contact']"  >Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
     <div class="col-6 collapse navbar-collapse justify-content-around" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
@@ -57,6 +84,10 @@
 
             
     </div>
+  
 </div>
   </header>
   
+
+
+
